@@ -12681,13 +12681,18 @@ static struct arm_cpu_option_table arm_cpus[] =
   {"arm926ej-s",	ARM_ARCH_V5TEJ,	 FPU_ARCH_VFP_V2},
   {"arm946e-r0",	ARM_ARCH_V5TExP, FPU_ARCH_VFP_V2},
   {"arm946e",		ARM_ARCH_V5TE,	 FPU_ARCH_VFP_V2},
+  {"arm946e-s",		ARM_ARCH_V5TE,	 FPU_ARCH_VFP_V2},
   {"arm966e-r0",	ARM_ARCH_V5TExP, FPU_ARCH_VFP_V2},
   {"arm966e",		ARM_ARCH_V5TE,	 FPU_ARCH_VFP_V2},
+  {"arm966e-s",		ARM_ARCH_V5TE,	 FPU_ARCH_VFP_V2},
+  {"arm968e-s",		ARM_ARCH_V5TE,	 FPU_ARCH_VFP_V2},
   {"arm10t",		ARM_ARCH_V5T,	 FPU_ARCH_VFP_V1},
+  {"arm10tdmi",		ARM_ARCH_V5T,	 FPU_ARCH_VFP_V1},
   {"arm10e",		ARM_ARCH_V5TE,	 FPU_ARCH_VFP_V2},
   {"arm1020",		ARM_ARCH_V5TE,	 FPU_ARCH_VFP_V2},
   {"arm1020t",		ARM_ARCH_V5T,	 FPU_ARCH_VFP_V1},
   {"arm1020e",		ARM_ARCH_V5TE,	 FPU_ARCH_VFP_V2},
+  {"arm1022e",		ARM_ARCH_V5TE,	 FPU_ARCH_VFP_V2},
   {"arm1026ejs",	ARM_ARCH_V5TEJ,	 FPU_ARCH_VFP_V2},
   {"arm1026ej-s",	ARM_ARCH_V5TEJ,	 FPU_ARCH_VFP_V2},
   {"arm1136js",		ARM_ARCH_V6,	 FPU_NONE},
@@ -12696,6 +12701,8 @@ static struct arm_cpu_option_table arm_cpus[] =
   {"arm1136jf-s",	ARM_ARCH_V6,	 FPU_ARCH_VFP_V2},
   {"mpcore",		ARM_ARCH_V6K,	 FPU_ARCH_VFP_V2},
   {"mpcorenovfp",	ARM_ARCH_V6K,	 FPU_NONE},
+  {"arm1156t2-s",	ARM_ARCH_V6T2,	 FPU_NONE},
+  {"arm1156t2f-s",	ARM_ARCH_V6T2,	 FPU_ARCH_VFP_V2},
   {"arm1176jz-s",	ARM_ARCH_V6ZK,	 FPU_NONE},
   {"arm1176jzf-s",	ARM_ARCH_V6ZK,	 FPU_ARCH_VFP_V2},
   /* ??? XSCALE is really an architecture.  */
