@@ -86,16 +86,23 @@ recognized:
 @code{arm926ej-s},
 @code{arm946e-r0},
 @code{arm946e},
+@code{arm946e-s},
 @code{arm966e-r0},
 @code{arm966e},
+@code{arm966e-s},
+@code{arm968e-s},
 @code{arm10t},
+@code{arm10tdmi},
 @code{arm10e},
 @code{arm1020},
 @code{arm1020t},
 @code{arm1020e},
+@code{arm1022e},
 @code{arm1026ej-s},
 @code{arm1136j-s},
 @code{arm1136jf-s},
+@code{arm1156t2-s},
+@code{arm1156t2f-s},
 @code{arm1176jz-s},
 @code{arm1176jzf-s},
 @code{mpcore},
